add new backend services:
GET /vaults/{vaultId}/members
PUT /vaults/{vaultId}/members/{userId}
GET /vaults/{vaultId}/devices-requiring-access-grant